more styling errors and attempt to fix background image on mobile

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -16,12 +16,13 @@ $home-image: url(../img/background3.jpg) center/cover;
       opacity: 0.9;
     }
   }
+}
 
-  @mixin noBackground {
-    @if $show-home-image {
-      &#home {
-        background: none;
-      }
+@mixin mobileBackground {
+  @if $show-home-image {
+    &#home {
+      background: $home-image;
+      background-size: cover;
     }
   }
 }
