--- a/scss/main.scss
+++ b/scss/main.scss
@@ -41,10 +41,6 @@ h3 {
   animation-duration: 1s;
 }
 
-.space {
-  margin-right: 1.6rem;
-}
-
 .container {
   margin-top: 8rem;
 }
@@ -128,15 +124,6 @@ main {
     }
   }
 }
-
-// .nav-bar {
-//   background-color: darken($primary-color, 50);
-//   padding: 12px;
-//   text-transform: uppercase;
-//   text-align: center;
-//   display: flex;
-//   justify-content: space-around;
-// }
 
 //About section
 #about-heading,
